refactor: rename brio_wu case and align numerics

--- a/notebooks/cylindrical_shock.ipynb
+++ b/notebooks/cylindrical_shock.ipynb
@@ -156,7 +156,7 @@
     "from IPython.display import HTML\n",
     "\n",
     "# jax-frc imports\n",
-    "from jax_frc.configurations.brio_wu_shock import BrioWuShockConfiguration\n",
+    "from jax_frc.configurations.brio_wu import BrioWuConfiguration\n",
     "from jax_frc.solvers.explicit import RK4Solver\n",
     "\n",
     "# Notebook utilities\n",
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# Create configuration\n",
-    "config = BrioWuShockConfiguration(\n",
+    "config = BrioWuConfiguration(\n",
     "    nz=nz,\n",
     "    nx=nr,\n",
     "    gamma=gamma,\n",
